Tue Jul 17 13:25:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/fieldactions.py,secore/searchconnection.py: Add support
	  for tagging - as yet, undocumented, and minimally tested.

Mon Jul 16 11:32:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Check for KeyError when getting a
	  slot number for a range restriction, too.

Mon Jul 16 11:18:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Check for KeyError when accessing
	  list of field actions, and behave as if an empty list was found
	  if the field is unknown.

Fri Jul 13 16:39:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Add an option to query_filter to
	  return only those documents which _don't_ match the filter,
	  instead of those which do.
	* secore/searchconnection_doctest2.txt: Add a test for using a
	  filter with exclude=True.

Mon Jul 09 11:23:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Convert supplied sequence of queries
	  to list, since xapian query constructor isn't happy to take an
	  iterator.

Fri Jul 06 16:38:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection.py: Fix bug in replace() causing the
	  document data not to be stored.

Wed Jul 04 17:24:40 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,perftest/index_from_dump.py,secore/:
	  Change all occurrences of unique_id to just "id" - no need to say
	  the unique bit, so it's just wasted typing.

Mon Jul 02 09:08:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: If a search connection is opened
	  before the fieldmappings file has been created, give it an empty
	  FieldMappings object.  Also, fix a bug in handling of
	  checkatleast.

Sun Jul 01 18:13:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>
