@@ -1,3 +1,9 @@
+Tue Jul 17 13:42:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/introduction.rst,secore/fieldactions.py,
+	  secore/searchconnection.py: Add some documentation of tags, and
+	  fix a couple of bugs.
+
 Tue Jul 17 13:25:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/fieldactions.py,secore/searchconnection.py: Add support
